# smart_board

./: README.md  pyproject.toml
.github/workflows/: ci.yml
smart_board/: hooks.py  modules.txt
smart_board/fixtures/: insights_chart_v3.json  insights_dashboard_v3.json  insights_query_v3.json  insights_workbook.json
